attempt 2 to fix some layout issues

--- a/css/theme/osgeo.css
+++ b/css/theme/osgeo.css
@@ -392,7 +392,7 @@ h3.shadow {
  * BIO
  *********************************************/
 .bio-img {
-    width: 25%;
+    width: 35%;
     border-radius: 60%;
     float: right;
     padding-bottom: 2rem;
